# Quackathon

./: .env.example  .gitignore  AGENTS.md  Afferens_Memory_Guardian_PRD.md  README.md  docker-compose.yml  render.yaml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260621_0001_create_durable_memory_schema.py  20260621_0002_add_multimodal_enrichment.py  20260621_0003_add_home_zones.py  20260621_0004_add_daily_care_messages.py  20260621_0005_add_hydration_wellness.py  (+5 more)
backend/app/: __init__.py  action_intelligence.py  actuation.py  afferens_adapter.py  alerts.py  ambient.py  assistant.py  config.py  db.py  diary.py  embeddings.py  enrichment.py  guidance.py  main.py  memory.py  models.py  normalizer.py  object_search.py  observability.py  provider_status.py  query_service.py  repositories.py  runtime_supervisor.py  schemas.py  semantic_memory.py  services.py  sql_repository.py  task_resolution.py  tasks.py  wellness.py  yolo_fall_adapter.py
backend/scripts/: smoke_model_providers.py
backend/tests/: conftest.py  test_action_events_routes.py  test_actuation_routes.py  test_afferens_adapter.py  test_alert_routes.py  test_ambient_routes.py  test_assistant_router.py  test_config.py  test_daily_care_routes.py  test_enrichment_routes.py  test_fireworks_adapter.py  test_home_zones_routes.py  test_memory.py  test_normalizer.py  test_perception_routes.py  test_provider_modality_status.py  test_query_workflow.py  test_routes.py  test_runtime_supervisor.py  test_safety.py  test_semantic_memory.py  test_task_resolution_routes.py  test_voice_guidance_routes.py  test_wellness_routes.py  test_yolo_fall_adapter.py
(+74 files in other folders)
